<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llm_input</name>
  <version>0.0.1</version>
  <description>The llm_input package contains input nodes for the ROS-LLM.</description>
  <maintainer email="hermanye233@icloud.com">Herman Ye</maintainer>
  <license>Apache-2.0</license>

  <depend>llm_config</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
