<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llm_interfaces</name>
  <version>0.0.1</version>
  <description>Interfaces for ROS-LLM package</description>
  <maintainer email="hermanye233@icloud.com">Herman Ye</maintainer>
  <license>Apache-2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- The interfaces rely on rosidl_default_generators for generating language-specific code -->
  <!-- you need to declare a dependency on it -->
  <!-- ROS Interfaces Settings https://docs.ros.org/en/crystal/Tutorials/Custom-ROS2-Interfaces.html -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>